# ai-backend

./: .gitignore  actions.py  gizlidosya.py  main.py  messaging.py  piper.py  pyproject.toml  sound.py  speechrecognition.py
electron/: actions.py  messaging.py  transformers.py
gemini/: __init__.py
gemini/actions/: __init__.py  food.py  news.py  system.py  time.py  weather.py
speech/piper/: __init__.py  chk.sum  process.py
