[tool.poetry]
name = "ai-backend"
version = "0.1.0"
description = "ai-frontend's python backend"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.3"
pyaudio = "^0.2.14"
openai-whisper = "^20240930"
numpy = "^2.0.0"               # used by us but cannot use 2.1 releases due to numba
silero-vad = "^5.1.2"
beautifulsoup4 = "^4.12.3"
markdown = "^3.7"
# below is due to openai-whisper version clash, fix when possible
llvmlite = "^0.43.0"
numba = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
